--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,22 @@
-Flask==1.1.2
-Flask-Cors==3.0.8
-ipykernel==5.3.0
-ipython==7.14.0
-jupyter==1.0.0
-Keras-Preprocessing==1.1.2
-matplotlib==3.2.1
-numpy==1.18.4
-opencv-python==4.2.0.34
-pandas==1.0.3
-pandas-datareader==0.8.1
-pickleshare==0.7.5
-Pillow==7.1.2
-QtPy==1.9.0
-requests==2.23.0
-requests-oauthlib==1.3.0
-scikit-learn==0.23.1
-scipy==1.4.1
-seaborn==0.10.1
-sklearn==0.0
-tensorflow==2.2.0
+Flask
+Flask-Cors
+ipykernel
+ipython
+jupyter
+Keras-Preprocessing
+matplotlib
+numpy
+opencv-python
+pandas
+pickleshare
+Pillow
+QtPy
+requests
+scikit-learn
+scipy
+seaborn
+sklearn
+tensorflow
 
 
 
